--- a/iBank/iBank/setting.plist
+++ b/iBank/iBank/setting.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Option_logo2</key>
+	<string>customer_logo.jpg</string>
 	<key>Option_KeepAliveTime</key>
 	<string>14</string>
 	<key>Last_LoginUser</key>
